force-app/main/default/objects/TabelaVendas__c/fields/AcrescimoValorTotal__c.field-meta.xml
<CustomField>
    <fullName>AcrescimoValorTotal__c</fullName>
    <inlineHelpText>Porcentagem a ser acrescida no valor total da Tabela</inlineHelpText>
    <label>Acrescimo sobre Valor Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>