force-app/main/default/objects/TabelaVendas__c/fields/AntecipacaoAposHabiteSe__c.field-meta.xml
<CustomField>
    <fullName>AntecipacaoAposHabiteSe__c</fullName>
    <formula>EXP(LN((1+ TaxaTP__c ))*( PeriodicidadeParcelaPos__c /12))-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Taxa de antecipação após o habite-se por mês</inlineHelpText>
    <label>Antecipação APÓS o Habite-se</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Percent</type>
</CustomField>