force-app/main/default/objects/TabelaVendas__c/fields/ClonadoPor__c.field-meta.xml
<CustomField>
    <fullName>ClonadoPor__c</fullName>
    <label>Clonado Por</label>
    <length>200</length>
    <type>Text</type>
</CustomField>