force-app/main/default/objects/TabelaVendas__c/fields/Cotacao__c.field-meta.xml
<CustomField>
    <fullName>Cotacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cotação</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Tabela de Vendas</relationshipLabel>
    <relationshipName>Tabela_de_Vendas</relationshipName>
    <type>Lookup</type>
</CustomField>