force-app/main/default/objects/TabelaVendas__c/fields/DataBase__c.field-meta.xml
<CustomField>
    <fullName>DataBase__c</fullName>
    <label>Data Base</label>
    <type>Date</type>
</CustomField>