force-app/main/default/objects/TabelaVendas__c/fields/DataDaClonagem__c.field-meta.xml
<CustomField>
    <fullName>DataDaClonagem__c</fullName>
    <label>Data da Clonagem</label>
    <type>DateTime</type>
</CustomField>