force-app/main/default/objects/TabelaVendas__c/fields/DataFim__c.field-meta.xml
<CustomField>
    <fullName>DataFim__c</fullName>
    <inlineHelpText>Vigência final da Tabela de Venda</inlineHelpText>
    <label>Data Fim</label>
    <type>Date</type>
</CustomField>