force-app/main/default/objects/TabelaVendas__c/fields/DataInicio__c.field-meta.xml
<CustomField>
    <fullName>DataInicio__c</fullName>
    <inlineHelpText>Vigência inicial da Tabela de Venda</inlineHelpText>
    <label>Data de Início</label>
    <type>Date</type>
</CustomField>