force-app/main/default/objects/TabelaVendas__c/fields/IdDeOrigem__c.field-meta.xml
<CustomField>
    <fullName>IdDeOrigem__c</fullName>
    <label>ID de Origem</label>
    <length>200</length>
    <type>Text</type>
</CustomField>