force-app/main/default/objects/TabelaVendas__c/fields/IndicePosChave__c.field-meta.xml
<CustomField>
    <fullName>IndicePosChave__c</fullName>
    <label>Indice Pós-Chave</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>