force-app/main/default/objects/TabelaVendas__c/fields/IndicePreChave__c.field-meta.xml
<CustomField>
    <fullName>IndicePreChave__c</fullName>
    <label>Indice Pré-Chave</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>