force-app/main/default/objects/TabelaVendas__c/fields/MesVigencia__c.field-meta.xml
<CustomField>
    <fullName>MesVigencia__c</fullName>
    <formula>CASE(MONTH(DATEVALUE(CreatedDate)),
1, &quot;Janeiro&quot;,
2, &quot;Fevereiro&quot;,
3, &quot;Março&quot;,
4, &quot;Abril&quot;,
5, &quot;Maio&quot;,
6, &quot;Junho&quot;,
7, &quot;Julho&quot;,
8, &quot;Agosto&quot;,
9, &quot;Setembro&quot;,
10, &quot;Outubro&quot;,
11, &quot;Novembro&quot;,
12, &quot;Dezembro&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mês de Vigência</label>
    <type>Text</type>
</CustomField>