force-app/main/default/objects/TabelaVendas__c/fields/OrigemTabelaDeVenda__c.field-meta.xml
<CustomField>
    <fullName>OrigemTabelaDeVenda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origem Tabela de Venda</label>
    <referenceTo>TabelaVendas__c</referenceTo>
    <relationshipLabel>Tabela de Vendas</relationshipLabel>
    <relationshipName>TabelaDeVendas</relationshipName>
    <type>Lookup</type>
</CustomField>