force-app/main/default/objects/TabelaVendas__c/fields/PercentualDeAcrescimo__c.field-meta.xml
<CustomField>
    <fullName>PercentualDeAcrescimo__c</fullName>
    <inlineHelpText>Percentual (%) que será acrescido no valor das Unidades</inlineHelpText>
    <label>Percentual de acréscimo (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>