force-app/main/default/objects/TabelaVendas__c/fields/PercentualParcela__c.field-meta.xml
<CustomField>
    <fullName>PercentualParcela__c</fullName>
    <label>Percentual da parcela</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>