force-app/main/default/objects/TabelaVendas__c/fields/PeriodicidadeParcela__c.field-meta.xml
<CustomField>
    <fullName>PeriodicidadeParcela__c</fullName>
    <inlineHelpText>Mensal = 1, Semestral = 6, Anual = 12</inlineHelpText>
    <label>Periodicidade da parcela</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Mensal</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Semestral</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Anual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>