force-app/main/default/objects/TabelaVendas__c/fields/PeriodicidadeParcelaPos__c.field-meta.xml
<CustomField>
    <fullName>PeriodicidadeParcelaPos__c</fullName>
    <inlineHelpText>Mensal = 1, Semestral = 6, Anual = 12</inlineHelpText>
    <label>Periodicidade da parcela</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>