force-app/main/default/objects/TabelaVendas__c/fields/Situacao__c.field-meta.xml
<CustomField>
    <fullName>Situacao__c</fullName>
    <formula>IF(
    AND(
        TODAY() &gt;= DataInicio__c ,
        TODAY() &lt;= DataFim__c
    ),
    &quot;Em vigor&quot;,
    &quot;Suspensa&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Em vigor- Dentro da vigência / Suspensa - Fora da vigência</inlineHelpText>
    <label>Situação</label>
    <type>Text</type>
</CustomField>