force-app/main/default/objects/TabelaVendas__c/fields/TipoDeTabela__c.field-meta.xml
<CustomField>
    <fullName>TipoDeTabela__c</fullName>
    <label>Tipo de tabela</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financiamento Bancário</fullName>
            </value>
            <value>
                <fullName>Financiamento Construtora</fullName>
            </value>
            <value>
                <fullName>A Vista</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>