force-app/main/default/objects/TabelaVendas__c/fields/TipoVenda__c.field-meta.xml
<CustomField>
    <fullName>TipoVenda__c</fullName>
    <label>Tipo de Venda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TipoVenda</valueSetName>
    </valueSet>
</CustomField>