force-app/main/default/objects/TabelaVendas__c/fields/ValorDeAcrescimo__c.field-meta.xml
<CustomField>
    <fullName>ValorDeAcrescimo__c</fullName>
    <inlineHelpText>Valor nominal que será acrescido no valor das Unidades</inlineHelpText>
    <label>Valor de acréscimo Nominal (Moeda)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>