force-app/main/default/objects/TabelaVendas__c/fields/ValorDeLista__c.field-meta.xml
<CustomField>
    <fullName>ValorDeLista__c</fullName>
    <label>Valor De Lista</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>