force-app/main/default/objects/TabelaVendas__c/fields/ValorDeVenda__c.field-meta.xml
<CustomField>
    <fullName>ValorDeVenda__c</fullName>
    <label>Valor de venda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>