force-app/main/default/objects/TabelaVendas__c/fields/VigenciaFim__c.field-meta.xml
<CustomField>
    <fullName>VigenciaFim__c</fullName>
    <label>Vigência fim</label>
    <type>Date</type>
</CustomField>