force-app/main/default/objects/TabelaVendas__c/fields/VigenciaInicio__c.field-meta.xml
<CustomField>
    <fullName>VigenciaInicio__c</fullName>
    <label>Vigência início</label>
    <type>Date</type>
</CustomField>