force-app/main/default/objects/TabelaVendas__c/recordTypes/Tabela_de_Proposta.recordType-meta.xml
<RecordType>
    <fullName>Tabela_de_Proposta</fullName>
    <active>true</active>
    <label>Tabela de Proposta</label>
</RecordType>