force-app/main/default/objects/TabelaVendas__c/validationRules/Data_Inicio.validationRule-meta.xml
<ValidationRule>
    <fullName>Data_Inicio</fullName>
    <active>true</active>
    <errorConditionFormula>DataInicio__c  &lt;  DataInclusao__c</errorConditionFormula>
    <errorDisplayField>DataInicio__c</errorDisplayField>
    <errorMessage>Data Inicio não pode ser iniciada antes da Inclusão</errorMessage>
</ValidationRule>