force-app/main/default/objects/TabelaVendas__c/validationRules/DataFim.validationRule-meta.xml
<ValidationRule>
    <fullName>DataFim</fullName>
    <active>true</active>
    <errorConditionFormula>DataFim__c  &lt;=  DataInicio__c</errorConditionFormula>
    <errorDisplayField>DataFim__c</errorDisplayField>
    <errorMessage>Data de fim não pode ser antes da data inicio</errorMessage>
</ValidationRule>