force-app/main/default/objects/TabelaVendas__c/validationRules/DataFimNaoPodeSerAnteriorDataInicio.validationRule-meta.xml
<ValidationRule>
    <fullName>DataFimNaoPodeSerAnteriorDataInicio</fullName>
    <active>true</active>
    <errorConditionFormula>VigenciaFim__c &lt; VigenciaInicio__c</errorConditionFormula>
    <errorDisplayField>VigenciaFim__c</errorDisplayField>
    <errorMessage>A Data de Fim da Vigência não pode ser anterior à Data de Início da Vigência.</errorMessage>
</ValidationRule>