force-app/main/default/objects/TabelaVendas__c/validationRules/DataInicioDeveSerAnteriorDataFim.validationRule-meta.xml
<ValidationRule>
    <fullName>DataInicioDeveSerAnteriorDataFim</fullName>
    <active>true</active>
    <errorConditionFormula>VigenciaInicio__c &gt;= VigenciaFim__c</errorConditionFormula>
    <errorDisplayField>VigenciaInicio__c</errorDisplayField>
    <errorMessage>A Data de Início da Vigência deve ser anterior à Data de Fim da Vigência</errorMessage>
</ValidationRule>