force-app/main/default/objects/TabelaVendas__c/validationRules/DatasDevemSerPreenchidas.validationRule-meta.xml
<ValidationRule>
    <fullName>DatasDevemSerPreenchidas</fullName>
    <active>true</active>
    <errorConditionFormula>Ativo__c = TRUE &amp;&amp; 
(OR(
    ISBLANK(VigenciaInicio__c), 
    ISBLANK(VigenciaFim__c)
))</errorConditionFormula>
    <errorDisplayField>Ativo__c</errorDisplayField>
    <errorMessage>A tabela de vendas só pode ser ativada se as datas de início e fim de vigência estiverem preenchidas.</errorMessage>
</ValidationRule>