force-app/main/default/objects/TabelaVendas__c/validationRules/DescontoNominalPorcentagem.validationRule-meta.xml
<ValidationRule>
    <fullName>DescontoNominalPorcentagem</fullName>
    <active>true</active>
    <errorConditionFormula>DescontoNominalPorcentagem__c &gt; 1</errorConditionFormula>
    <errorDisplayField>DescontoNominalPorcentagem__c</errorDisplayField>
    <errorMessage>A porcentagem de desconto não pode exceder 100%</errorMessage>
</ValidationRule>