force-app/main/default/objects/TabelaVendas__c/validationRules/NumerosAceitos.validationRule-meta.xml
<ValidationRule>
    <fullName>NumerosAceitos</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(OR(
    PeriodicidadeParcelaPos__c = 1,
    PeriodicidadeParcelaPos__c = 6,
    PeriodicidadeParcelaPos__c = 12
))</errorConditionFormula>
    <errorDisplayField>PeriodicidadeParcelaPos__c</errorDisplayField>
    <errorMessage>Número inválido! Permitidos: 1, 6, 12.</errorMessage>
</ValidationRule>