force-app/main/default/objects/TabelaVendas__c/validationRules/NumerosAceitosPre.validationRule-meta.xml
<ValidationRule>
    <fullName>NumerosAceitosPre</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(OR(
    PeriodicidadeParcela__c = 1,
    PeriodicidadeParcela__c = 6,
    PeriodicidadeParcela__c = 12
))</errorConditionFormula>
    <errorDisplayField>PeriodicidadeParcela__c</errorDisplayField>
    <errorMessage>Número inválido! Permitidos: 1, 6, 12.</errorMessage>
</ValidationRule>