force-app/main/default/objects/TabelaVendas__c/validationRules/Porcentagem_limite.validationRule-meta.xml
<ValidationRule>
    <fullName>Porcentagem_limite</fullName>
    <active>true</active>
    <errorConditionFormula>AcrescimoValorTotal__c &gt; 1</errorConditionFormula>
    <errorDisplayField>AcrescimoValorTotal__c</errorDisplayField>
    <errorMessage>Porcentagem excede o valor de 100%</errorMessage>
</ValidationRule>