force-app/main/default/objects/TabelaVendas__c/validationRules/TabelaAtiva.validationRule-meta.xml
<ValidationRule>
    <fullName>TabelaAtiva</fullName>
    <active>false</active>
    <errorConditionFormula>Ativo__c = TRUE &amp;&amp;
(TODAY() &lt; VigenciaInicio__c || TODAY() &gt; VigenciaFim__c)</errorConditionFormula>
    <errorDisplayField>Ativo__c</errorDisplayField>
    <errorMessage>A tabela de vendas só pode ser ativada durante o período de vigência.</errorMessage>
</ValidationRule>