force-app/main/default/objects/TabelaVendas__c/validationRules/TaxaDescontoVPL.validationRule-meta.xml
<ValidationRule>
    <fullName>TaxaDescontoVPL</fullName>
    <active>true</active>
    <errorConditionFormula>TaxaDescontoVPL__c &gt; 1</errorConditionFormula>
    <errorDisplayField>TaxaDescontoVPL__c</errorDisplayField>
    <errorMessage>Porcentagem excede o valor de 100%</errorMessage>
</ValidationRule>