force-app/main/default/objects/TabelaVendas__c/validationRules/TaxaTP.validationRule-meta.xml
<ValidationRule>
    <fullName>TaxaTP</fullName>
    <active>true</active>
    <errorConditionFormula>TaxaTP__c &gt; 1</errorConditionFormula>
    <errorDisplayField>TaxaTP__c</errorDisplayField>
    <errorMessage>Porcentagem excede o valor de 100%</errorMessage>
</ValidationRule>