force-app/main/default/objects/TabelaVendas__c/validationRules/TipoAcrescimo.validationRule-meta.xml
<ValidationRule>
    <fullName>TipoAcrescimo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(ValorDeAcrescimo__c)),
    NOT(ISBLANK(PercentualDeAcrescimo__c))
)</errorConditionFormula>
    <errorMessage>Apenas um tipo de acréscimo pode ser preenchido</errorMessage>
</ValidationRule>