force-app/main/default/objects/TabelaVendas__c/validationRules/TipoDesconto.validationRule-meta.xml
<ValidationRule>
    <fullName>TipoDesconto</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(DescontoNominalPorcentagem__c)),
    NOT(ISBLANK(DescontoNominalMoeda__c))
)</errorConditionFormula>
    <errorMessage>Apenas um tipo de desconto pode ser associado</errorMessage>
</ValidationRule>